--- a/EducationalAugmentedReality/app/build.gradle
+++ b/EducationalAugmentedReality/app/build.gradle
@@ -5,7 +5,7 @@ android {
     buildToolsVersion "23.0.3"
 
     defaultConfig {
-        applicationId "com.example.yasmin.educationalaugmentedrealitygame"
+        applicationId "com.example.yasmin.educationalaugmentedreality"
         minSdkVersion 19
         targetSdkVersion 23
         versionCode 1
@@ -19,9 +19,19 @@ android {
     }
 }
 
+
+repositories {
+    mavenCentral()
+    flatDir {
+        dirs 'libs'
+    }
+}
+
 dependencies {
     compile fileTree(dir: 'libs', include: ['*.jar'])
+    compile 'org.sensingkit:SensingKitLib-release@aar'
     testCompile 'junit:junit:4.12'
     compile 'com.android.support:appcompat-v7:23.1.1'
     compile 'com.android.support:design:23.1.1'
+    compile 'com.google.android.gms:play-services-location:8.3.0'
 }
