--- a/EducationalAugmentedReality/app/src/main/AndroidManifest.xml
+++ b/EducationalAugmentedReality/app/src/main/AndroidManifest.xml
@@ -23,6 +23,11 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
+
+        <service android:name= ".GeofenceTransitionsIntentService"/>
+
+        <service android:name= ".OrientationSensor" />
+
     </application>
 
 </manifest>
