--- a/EducationalAugmentedReality/app/src/main/AndroidManifest.xml
+++ b/EducationalAugmentedReality/app/src/main/AndroidManifest.xml
@@ -3,8 +3,12 @@
     package="com.example.yasmin.educationalaugmentedreality">
 
     <uses-permission android:name="android.permission.CAMERA" />
+
     <uses-feature android:name="android.hardware.camera" />
-    <uses-feature android:name="android.hardware.camera.autofocus" android:required="true" />
+    <uses-feature
+        android:name="android.hardware.camera.autofocus"
+        android:required="true" />
+
     <uses-permission android:name="android.permission.ACCESS_FINE_LOCATION" />
 
     <application
@@ -24,10 +28,11 @@
             </intent-filter>
         </activity>
 
-        <service android:name= ".GeofenceTransitionsIntentService"/>
+        <service android:name=".GeofenceTransitionsIntentService" />
+        <service android:name=".OrientationSensor" />
 
-        <service android:name= ".OrientationSensor" />
-
+        <activity android:name=".CameraActivity" />
+        <activity android:name=".CrossWordActivity" />
     </application>
 
 </manifest>
