--- a/EducationalAugmentedReality/app/src/main/AndroidManifest.xml
+++ b/EducationalAugmentedReality/app/src/main/AndroidManifest.xml
@@ -33,6 +33,7 @@
 
         <activity android:name=".CameraActivity" />
         <activity android:name=".CrossWordActivity" />
+        <activity android:name=".TeacherActivity"></activity>
     </application>
 
 </manifest>
