Maps Change in location now detected
- Maps location manager now successfully working, a marker (cartoon of a
hiker) at current locaiton and will zoom in and move according to the
persons location,
- Added tilt of 60 degrees making the map look 3D, allow more of the map
to be seen at once
- Camera now successfully filming vertically (auto focus still not
working though)

--- a/EducationalAugmentedReality/app/src/main/AndroidManifest.xml
+++ b/EducationalAugmentedReality/app/src/main/AndroidManifest.xml
@@ -9,7 +9,9 @@
         android:name="android.hardware.camera.autofocus"
         android:required="true" />
 
+    <uses-permission android:name="android.permission.ACCESS_GPS" />
     <uses-permission android:name="android.permission.ACCESS_FINE_LOCATION" />
+    <uses-permission android:name="android.permission.ACCESS_COARSE_LOCATION" />
 
     <application
         android:allowBackup="true"
@@ -48,7 +50,10 @@
 
         <activity
             android:name=".MapsActivity"
-            android:label="@string/title_activity_maps"></activity>
+            android:label="@string/title_activity_maps" />
+        <activity
+            android:name=".TeacherMapActivity"
+            android:label="@string/title_activity_teacher_map"></activity>
     </application>
 
 </manifest>
