AR slightly smoother and Child teacher map activity
- Dinosaur re-drawing is slightly more smoother and less jumpy due to
getting rid of extreme values/anomalies
- Successfully made teacher map activity a child activity meaning that
when called, it does erase data from activity it was called from,
teacher activity and the teacher is able to select a location and send
back the LatLng point.

--- a/EducationalAugmentedReality/app/src/main/AndroidManifest.xml
+++ b/EducationalAugmentedReality/app/src/main/AndroidManifest.xml
@@ -53,7 +53,8 @@
             android:label="@string/title_activity_maps" />
         <activity
             android:name=".TeacherMapActivity"
-            android:label="@string/title_activity_teacher_map"></activity>
+            android:label="@string/title_activity_teacher_map" />
+        <activity android:name=".TeacherLoginActivity"></activity>
     </application>
 
 </manifest>
