Making changes to AR stuff, not yet complete!
- Changed size of  camera and surfacedraw so that it takes up around 3/4
of screen rather than the whole screen in order to able to fit in the
crossword part of the app
- Now using suvat to work out the speed and distance travelled by using
x, y and z values (using filter to remove gravity.. need to explain this
in implementation section well)...
- To move in certain directions, use the following:
[0]      |      [1]     |      [2]
---------------------------------------
X         |        Y      |
UP        |    LEFT     |
DOWN   |   RIGHT   |

--- a/EducationalAugmentedReality/app/src/main/AndroidManifest.xml
+++ b/EducationalAugmentedReality/app/src/main/AndroidManifest.xml
@@ -32,6 +32,7 @@
 
         <service android:name=".GeofenceTransitionsIntentService" />
         <service android:name=".OrientationSensor" />
+        <service android:name=".MyOrientationListener" />
 
         <activity android:name=".CameraActivity" />
         <activity android:name=".CrossWordActivity" />
